crates/eventric-domain/tests/ui/projection_unknown_key.stderr
error: unknown key `oops`; expected `selections`
 --> tests/ui/projection_unknown_key.rs:4:14
  |
4 | #[projection(oops: { thing: { events: [Foo] } })]
  |              ^^^^
