crates/eventric-domain/tests/ui/projection_unknown_key.rs
use eventric_domain::projection::Projection;

#[derive(Projection)]
#[projection(oops: { thing: { events: [Foo] } })]
struct Bar;

fn main() {}
